fixed overflow issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 
 html,body {
 	height: 100%;
-	overflow: auto;
+	overflow-x: hidden;
 }
 
 html, body, div, span, applet, object, iframe,
@@ -50,4 +50,12 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+.element::-webkit-scrollbar { width: 0 !important }
+.element { -ms-overflow-style: none; }
+.element { overflow: -moz-scrollbars-none; }
+
+::-webkit-scrollbar {
+	display: none;
 }
